fixed navbar z-index so it is hidden once it passes the hero image on home page

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -27,6 +27,7 @@ header {
     width: 100%;
     height: 100px;
     position: fixed;
+    z-index: -1;
 }
 
 #logo {
@@ -41,6 +42,7 @@ header {
     float: right;
     margin-top: 3vw;
     padding-right: 1vw;
+
 }
 
 #nav li {
@@ -53,6 +55,7 @@ header {
     font-size: 1.5em;
     padding: .5vw;
     color: white;
+
     
 }
 
@@ -190,7 +193,6 @@ header {
 
 .individual-review  {
     padding-top: 5%;
-
 }
 
 .individual-review h4 {
